Ticket #15047 (closed defect: fixed)

Opened 3 months ago

Last modified 3 months ago

wxHtmlWindow, corrupted background with background image when content is scrolled

Reported by: ericj Owned by:
Priority: normal Milestone:
Component: wxHtml Version: 2.9-svn
Keywords: wxHtmlWindow background Cc:
Blocked By: Patch: yes
Blocking:

Description

This is similar to #14917

The fix is the same, redraw the whole virtual area.

Attachments

wxhtml_background_bitmap_scroll_fix.patch download (0.5 KB) - added by ericj 3 months ago.

Change History

Changed 3 months ago by ericj

Changed 3 months ago by VZ

  • status changed from new to closed
  • resolution set to fixed

(In [73543]) Fix background corruption in scrolled wxHtmlWindow.

Draw the background on the entire virtual size, not just the currently shown
client size.

Closes #15047.

Note: See TracTickets for help on using tickets.